[metadata]
name = network-survey-messaging-py
version = 0.1.0
author = Glen Cornell
author_email = glen.m.cornell@gmail.com
description = communicate with the network-survey-messaging MQTT broker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glencornell/network-survey-messaging-py
project_urls =
    Docs = https://github.com/glencornell/network-survey-messaging-py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    gpsdthreaded==0.1.0

[options.packages.find]
where = src
